fixed the aligning and the positions of all the content. Reference #19 "

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@ div p {
 
 }
 
-div {
+div form {
 display: flex;
 justify-content: center;
 margin-top: 25%;
@@ -21,7 +21,14 @@ width: 100%;
 
 input[placeholder] {
   background-color: #055254;
+  color: white;
   text-align: center;
+  padding: 1% 25%;
+  margin-right: 2%;
+}
+
+button {
+  padding: 0 2%;
 }
 
 ::-webkit-input-placeholder { /* Chrome */
